# agent-auth

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  TODOS.md  announcement.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy-site.yml  release-js.yml  release-kanoniv-auth.yml  release-python.yml  release-rust.yml
aa-brand/: kanoniv-linkedin-strategy.md
aa-brand/images/: banner.html  package-lock.json  package.json  post1-missing-layer.html  post2-engine.html  post3-security-gap.html  post4-scope.html  render.js
apps/api/src/: index.js
apps/observatory/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/observatory/src/: App.tsx  index.css
apps/observatory/src/components/: ActivityFeed.tsx  AgentCard.tsx  DelegationCard.tsx  ErrorBoundary.tsx  Layout.tsx  ReputationBadge.tsx  StatCard.tsx  ToolCallCard.tsx
apps/observatory/src/hooks/: useAuth.ts  useClientDetail.ts  useClients.ts  useMemory.ts  useTools.ts
apps/observatory/src/lib/: constants.ts  cpApi.ts  utils.ts
apps/observatory/src/pages/: AgentDetailPage.tsx  AgentsPage.tsx  AuditPage.tsx  ClientDetailPage.tsx  ClientsPage.tsx  ConnectPage.tsx  CreateAgentPage.tsx  DashboardPage.tsx  EscalationsPage.tsx  LoginPage.tsx  ProvenancePage.tsx  SettingsPage.tsx  SignupPage.tsx  ToolsPage.tsx  VerifyPage.tsx
db/: 002-tools.sql  003-escalations.sql  004-escalation-client-id.sql  init.sql  seed.sql
demo/: agents.py  app.py  coordinator.py  debate.py  hospital.py  identity.py  memory.py  nostr_publish.py  provenance.py  requirements.txt
demo/templates/: index.html
docs/designs/: sudo-for-agents.md
examples/: crewai_demo.py  generate_fixtures.rs  langchain_demo.py
examples/github-deploy/: README.md  audit.py  delegate.py  deploy.py
fixtures/: test-keypair.json  test-provenance-chain.json  test-signed-message.json
integrations/: README.md  mcp_sdk_python.py
integrations/mcp-sdk-typescript/: README.md  index.ts
js/: package.json  tsconfig.json
js/src/: cli.ts  error.ts  identity.ts  index.ts  provenance.ts  reputation.ts  signing.ts
js/src/test/: identity.test.ts  provenance.test.ts  reputation.test.ts  signing.test.ts
proposal/: mcp-agent-auth-discussion.md
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
python/src/kanoniv_agent_auth/: __init__.py  _native.pyi
python/tests/: test_agent_auth.py
sdks/kanoniv-auth/: README.md  pyproject.toml
sdks/kanoniv-auth/kanoniv_auth/: __init__.py  audit.py  auth.py  cli.py  crypto.py  errors.py  registry.py
sdks/kanoniv-auth/kanoniv_auth/cloud/: __init__.py  cli.py  client.py
sdks/kanoniv-auth/kanoniv_auth/hooks/: pre-push
sdks/kanoniv-auth/tests/: test_advanced.py  test_auth.py  test_cli.py  test_crypto.py  test_dx.py  test_registry.py
sdks/kanoniv-trust/: README.md  demo.ipynb  pyproject.toml
sdks/kanoniv-trust/kanoniv_trust/: __init__.py  cli.py  client.py
sdks/python/: .langchain-demo.db
site/: index.md  package-lock.json  package.json
site/.vitepress/: config.ts
site/.vitepress/theme/: custom.css
site/guide/: claude-code-skill.md  getting-started.md  github-action.md  how-it-works.md
site/reference/: cli.md  python-api.md  token-format.md
skill/: README.md  SKILL.md
spec/: AGENT-IDENTITY.md  CROSS-ENGINE-VERIFICATION.md
src/: delegation.rs  error.rs  identity.rs  lib.rs  mcp.rs  provenance.rs  signing.rs
tests/interop/: test_cross_sdk.py
tutorials/: README.md  langgraph_multi_agent_handoff.py
w3c-registration/: PR_DESCRIPTION.md
