[package]
name = "kanoniv-agent-auth"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Cryptographic identity primitives for AI agents - Ed25519 keypairs, DIDs, signed envelopes, and provenance entries"
repository = "https://github.com/kanoniv/agent-auth"
homepage = "https://kanoniv.com"
keywords = ["agent", "identity", "cryptography", "did", "ed25519"]
categories = ["authentication", "cryptography"]
readme = "README.md"

[dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1.0"
rand = "0.8"
base64 = "0.21"

[dev-dependencies]
serde_json = "1.0"
