[package]
name = "kanoniv-agent-auth"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "Sudo for AI agents - cryptographic delegation, Ed25519 identity, and signed audit trails"
repository = "https://github.com/kanoniv/agent-auth"
homepage = "https://kanoniv.com"
keywords = ["agent", "identity", "cryptography", "delegation", "ed25519"]
categories = ["authentication", "cryptography"]
readme = "README.md"
autobins = false

[dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1.0"
rand = "0.8"
bs58 = "0.5"
base64 = "0.22"

# CLI dependencies (behind feature flag)
clap = { version = "4", features = ["derive", "env"], optional = true }
colored = { version = "2", optional = true }
dirs = { version = "5", optional = true }

# Server dependencies (behind feature flag)
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }

[dev-dependencies]
serde_json = "1.0"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }

[features]
default = []
cli = ["clap", "colored", "dirs"]
server = ["axum", "tokio", "rusqlite", "tower-http"]
full = ["cli", "server"]

[[bin]]
name = "kanoniv-auth"
path = "src/bin/main.rs"
required-features = ["cli"]
