[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kanoniv-agent-auth"
version = "0.1.0"
description = "Cryptographic identity primitives for AI agents - Ed25519 keypairs, DIDs, signed envelopes, and provenance entries"
readme = "../README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["agent", "identity", "cryptography", "did", "ed25519"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
]

[project.urls]
Repository = "https://github.com/kanoniv/agent-auth"
Homepage = "https://kanoniv.com"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "kanoniv_agent_auth._native"
python-source = "src"
