[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kanoniv-auth"
version = "0.1.0"
description = "Sudo for AI agents. Replace API keys with cryptographic delegation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["cryptography>=42.0"]
keywords = ["agents", "auth", "delegation", "ci-cd", "security", "ed25519"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/kanoniv/agent-auth"
Documentation = "https://kanoniv.com/docs"
Issues = "https://github.com/kanoniv/agent-auth/issues"

[project.scripts]
kanoniv-auth = "kanoniv_auth.cli:main"

[project.optional-dependencies]
cli = ["click>=8.0"]
dev = ["pytest", "pytest-cov"]
